fixed z-index

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
+    position: relative;
     z-index: 1; 
 }
 
